# tauri-macos-haptics

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
example/: README.md  app.config.ts  components.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
example/src/: styles.css
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: main.json
example/src-tauri/src/: lib.rs
example/src/components/: step-slider.tsx
example/src/routes/: index.tsx
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  haptics.rs  lib.rs
