[package]
name = "tauri-macos-haptics"
version = "2.0.0"
authors = ["Entro314 Labs"]
license = "MIT"
description = "Modern macOS haptics (Taptic Engine) plugin for Tauri v2 apps with objc2 bindings."
repository = "https://github.com/entro314-labs/tauri-macos-haptics"
homepage = "https://github.com/entro314-labs/tauri-macos-haptics"
readme = "README.md"
keywords = ["tauri", "macos", "haptics", "taptic", "plugin"]
categories = ["os::macos-apis", "gui", "api-bindings"]
edition = "2024"
rust-version = "1.93"
exclude = ["/example", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-macos-haptics"

[dependencies]
tauri = { version = "2" }
serde = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
